# ros2_hoisting_system

./: .gitignore  all_services.pid  start_all.sh  stop_all.sh
docs/: README.md  SIMULATION_GUIDE.md  architecture.md  git_proxy_configuration.md  installation.md  usage.md
src/communication/: CMakeLists.txt  package.xml
src/communication/msg/: BatteryInfo.msg  DataFrame.msg  DroneCommand.msg  GroundStationData.msg  HoistData.msg  HookCommand.msg  MissionCommand.msg  PSDKCmd.msg  PSDKData.msg  RobotCommand.msg  SystemState.msg  TimeSyncStatus.msg
src/communication/srv/: UpdateFlightControlConfig.srv
src/dji_psdk_wrapper/: CMakeLists.txt  package.xml
src/dji_psdk_wrapper/config/: config.yaml
src/dji_psdk_wrapper/env-hooks/: dji_psdk_wrapper_env_vars.dsv  dji_psdk_wrapper_env_vars.dsv.in  dji_psdk_wrapper_library_path.dsv  dji_psdk_wrapper_library_path.dsv.in
src/dji_psdk_wrapper/hal/: hal_uart.c  hal_uart.h
src/dji_psdk_wrapper/include/dji_psdk_wrapper/: config_manager.hpp  logger.hpp  psdk_wrapper.hpp
src/dji_psdk_wrapper/resources/: PSDK_C++示例程序介绍.md  PSDK_C示例程序介绍.md
src/dji_psdk_wrapper/src/: dji_psdk_node.cpp  dji_psdk_wrapper.cpp
src/fc30_gazebo/: CMakeLists.txt  README.md  package.xml
src/fc30_gazebo/config/: controller_manager.yaml  fc30_rviz_config.rviz
src/fc30_gazebo/launch/: fc30_gazebo.launch.py  fc30_headless_only.launch.py
src/fc30_gazebo/models/fc30/: model.config  model.sdf  robot.urdf
src/fc30_gazebo/scripts/: run_teleop_simulation.sh
src/fc30_gazebo/src/: fc30_controller.cpp  psdk_bridge.cpp  rotor_dynamics_plugin.cpp  state_estimator.cpp  trajectory_planner.cpp
src/fc30_gazebo/worlds/: empty_world.sdf  fc30_drone_world.sdf
src/ground_station/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/ground_station/resources/: index.html  index.html解析与注释.md  ros_communication.js  地面站节点工作流程与数据交互说明.md  通讯逻辑与交互数据说明.md
src/ground_station/src/: ground_station_node.cpp
